@@ -7,6 +7,7 @@ Griffith ChangeLog
 
 2010-01-01  Michael Jahn
 	* [#501526] Error in export GCStar/DVDProfilerXMLExportV2/3
+	* updated movie plugin Allocine
 
 2009-12-28  Michael Jahn
 	* updated movie plugin Allocine, Amazon, FilmDb
